2009-01-22  Roland McGrath  <roland@redhat.com>

	* Makeconfig (%.v.i): Strip trailing # comments,
	not only whole-line comments.

2009-01-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-osinfo.h (_dl_setup_stack_chk_guard): Take
	one parameter.  If non-NULL use it to initialize return value.
	(_dl_setup_pointer_guard): New function.
	* sysdeps/unix/sysv/linux/dl-osinfo.h: Likewise.
	* sysdeps/generic/ldsodefs.h: Declare _dl_random.
	* elf/rtld.c (security_init): Pass _dl_random to
	_dl_setup_stack_chk_guard.  Call _dl_setup_pointer_guard to initialize
	pointer_chk_guard.
	* elf/dl-sysdep.c (_dl_random): New variable.
	(_dl_sysdep_start): Handle AT_RANDOM.
	(_dl_show_auxv): Likewise.
	* elf/dl-support.c (_dl_random): New variable.
	(_dl_aux_init): Handle AT_RANDOM.
	* csu/libc-start.c [!SHARED] (libc_start_main): Pass _dl_random
	to _dl_setup_stack_chk_guard.

	* elf/elf.h (AT_RANDOM): Define AT_BASE_PLATFORM and AT_RANDOM.

2009-01-10  Roland McGrath  <roland@redhat.com>

	* nscd/nscd.c (parse_opt): Use argp_error for bad -i argument.

2009-01-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/fpu/libm-test-ulps: Adjust expm1 errors.

	[BZ #9706]
	* nss/nss_files/files-parse.c (strtou32): New function.
	(INT_FIELD): Use strotu32 instead of strtoul to unify behavior
	across 32-bit and 64-bit platforms.
	(INT_FIELD_MAYBE_NULL): Likewise.

2009-01-08  Jakub Jelinek  <jakub@redhat.com>

	[BZ #9720]
	* sysdeps/unix/sysv/linux/bits/resource.h (enum __rusage_who): Avoid
	comma after RUSAGE_CHILDREN if not -D_GNU_SOURCE.
	* sysdeps/unix/sysv/linux/sparc/bits/resource.h (enum __rusage_who):
	Likewise.

2009-01-05  Paolo Bonzini  <bonzini@gnu.org>

	[BZ #697]
	* posix/regexec.c (prune_impossible_nodes): Handle sifted_states[0]
	being NULL also if there are no backreferences.
	* posix/rxspencer/tests: Add testcases.

2009-01-04  Paolo Bonzini  <bonzini@gnu.org>

	[BZ #9697]
	* posix/bug-regex17.c: Add testcases.